# python_cheatsheets

./: README.md  pyproject.toml
notebooks/: 01_Pythonの基本.ipynb  02_モジュールとパッケージ.ipynb  03_データの操作と可視化.ipynb  03_データの計算・操作.ipynb  03_データの計算・操作（工事中）.ipynb  04_データの可視化.ipynb  05_機械学習コードスニペット.ipynb
notebooks/.ipynb_checkpoints/: 02_モジュールとパッケージ-checkpoint.ipynb  03_データの操作と可視化-checkpoint.ipynb
src/mymodule/: __init__.py  greet.py
